Fix: CSS updated to align with design specs: adjusted margins, container settings, and layout refinements

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -38,8 +38,8 @@ $border-n300: #CBD5E1;
     text-align: $text_align ;
     color: $color;
 }
-@mixin container($margin){
-    max-width: 100%;
+@mixin container($max-width , $margin){
+    max-width: $max-width;
     margin: $margin;
 }
 img{
@@ -49,18 +49,25 @@ h4{
     @include font-style(Manrope, 1.5rem, 500, 20px ,center,black);
 }
 h1{
+@extend .content2;
     @include font-style(Manrope, 2rem, 600, 30px ,left,$primary-800);
+}
+h2{
+    @include font-style(Manrope, 1.7rem, 700, 27px ,left,$primary-800);
 }
 p{
     margin: 0px
 }
+.container{
+    max-width: 1280px;
+    margin: auto;
+}
 .navbar{
-    @include container(0rem);
     @include flex-center(row, space-between,50px );
     top: -1px;
-    padding: 12px 80px 12px 80px;
     background: #FFFFFF;
-    border-bottom: 1px solid #CBD5E1
+    border-bottom: 1px solid #CBD5E1;
+    padding-bottom: 15px;
 }
 .navLinks{
     @include flex-center(row,unset,12px ) ;
@@ -81,16 +88,22 @@ p{
     padding-left: 12px;
     border-radius: 32px;
     align-items: center;
-    background: var(--Primary-50, #EBFAE7);
+    background:#EBFAE7;
     @include flex-center(row,flex-end,35px );
 }
+
+// section 1
+ .Section_1{
+    background-color: $primary-50;
+ } 
+
 .heroSection {
-    @include container(0rem);
     display: flex;
-    padding: 72px 80px 0px 80px;
+    padding: 72px 0px 0px 0px;
     background: var(--Accent-50, #EBFAE7); 
 
 }
+
 .heroSection > *{
     flex:1;
 }
@@ -141,25 +154,39 @@ p{
     @include btn_style(black,$primary-500 );
 }
 .aboutSection{
-    @include container(4rem);
-    @include flex-center(row,center ,1rem );
-    // padding: 0px;
+    @include container(1440px,0rem);
+    @include flex-center(row,center ,2rem );
+    padding: 5rem;
     background: #FFFFFF;
+    align-items: center;
     > *{
         flex:1;
     }
+    > :first-child{
+        text-align: right
+    }
+    > :last-child{
+        text-align: left;
+    }
 }
 .aboutSectionContent{
-    @include flex-center(column,center ,0px )
+    @include flex-center(column,center ,20px )
+}
+
+// work process section 3
+
+.Section_3{
+    background: $primary-50;
 }
 .workProcess{
-    @include container(0rem);
+    // @include container(1440px,0rem);
     @include flex-center(column,center ,4rem );
     padding: 50px;
     align-items: center;
-    background: var(--Primary-50, #EBFAE7);
+    // background: var(--Primary-50, #EBFAE7);
     .processContent{
-        @include flex-center(row,center ,3rem );
+        @include flex-center(row,center ,4rem );
+        padding: 56px 48px
     }
 }
 
@@ -168,16 +195,23 @@ p{
     align-items: center;
 }
 
+//section 4
+
+.Section_4{
+    background: $primary-500;
+}
 .purchasing{
-    @include flex-center(column,center ,30px );
-    padding: 50px;
-    background: var(--Primary-500, #85E36E);
+    @include flex-center(column,unset ,30px );
+    padding: 88px 80px;
     align-items: center;
+    .purchasingHead{
+        @include flex-center(row,center ,30px );
+    }
 
 }
 .panel{
-    @include flex-center(row,center ,200px );
-    padding: 56px 48px 56px 48px;
+    @include flex-center(row,space-between ,150px );
+    padding: 8px 80px;
     border-radius: 40px;
     .panel > * {
         flex: 1;
@@ -194,7 +228,8 @@ p{
 .panellist{
     @include flex-center(column,center ,56px );
     background: white;
-    padding: 40px;
+    align-items: center;
+    padding: 56px 48px;
     border-radius: 40px;
 
 }
@@ -205,27 +240,38 @@ p{
     .listItems > *{
         flex: 1;
     }
+    p{
+        text-align: center
+    }
 }
 
 .faqs{
     @include flex-center(column,center ,2rem );
-    @include container(5rem 10rem 5rem 10rem);
-    padding: 50px;
+    @include container(1440px, 0px);
+    padding: 88px 80px;
     align-items: center;
 }
 .questionlist{
     @include flex-center(column,unset ,8px );
+    padding: 0px 100px;
 }
 .question{
     padding: 24px 32px 24px 32px;
     border-radius: 12px;
     background: $neutral-50
 }
+
+//section6
+
+.Section_6{
+    background: $primary-50;
+}
 .testinomialSection{
     @include flex-center(column,center ,2rem );
+    // @include container(1440px,0rem, );
+    padding: 88px 80px;
     background: $primary-50;
     text-align: center;
-    padding: 50px;
     align-items: center;                                 
 }
 .user{
@@ -246,10 +292,14 @@ p{
     border-radius: 20px;
     border: 1px;
 }
+
+//section 7
+
 .testinomialSection_2{
-    @include container(2rem 4rem 2rem 4rem);
+    // @include container(2rem 4rem 2rem 4rem);
     @include flex-center(column,center ,0px );
     background: white;
+    padding: 88px 80px;
     align-items: center;
 }
 .testinomial2box{
@@ -261,17 +311,24 @@ p{
     @include flex-center(column,center ,0px );
     padding-left:30px ;
     color: $primary-800;
+    width: 55%;
 }
 .image{
+    width: 45%;
     border-top-right-radius: 20px;
     border-bottom-right-radius:20px ;
 }
-.footer{
-    @include flex-center(column,unset ,0px );
-    padding-left: 30px;
-    padding-right: 30px;
-    background: $primary-50;
 
+// section 9
+
+.Section_8{
+    background: $primary-50;
+}
+.footer{
+    @include flex-center(column,center ,1rem );
+    @include container(1440px,0rem );
+    padding: 40px 80px 0px 80px;
+    background: $primary-50;
 }
 .footerContent{
     @include flex-center(row,space-between ,0px );
